test/spec_vectors/simd_lane/fail/module_75.wat
(module (func (result v128) (i16x8.replace_lane 0 (i64.const 0) (i32.const 1))))